# algove

./: .gitignore  404.html  Dockerfile  README.md  docker-compose.yaml  index.html  justfile  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: compose.sh  docker-compose-overrides.yaml  release.yaml
.github/workflows/: ci.yml
algove/: __init__.py  cache.py  datatypes.py  display.py  loaders.py  logger.py  pipeline.py  repository.py  store.py  streamlit_ui.py  transformers.py
algove/pages/: iris.py
algove_data/: parsed_data.parquet  predictions.parquet  train_set.parquet
docs/: example.ipynb  index.md
example/: index.html
examples/: iris.py
search/: search_index.json
tests/: conftest.py  test_cache.py  test_display.py  test_pipeline.py  test_repository.py  test_stuff.py  test_transformers.py  test_types.py
