[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry]
name = "algove"
version = "0.0.1"
description = ""
authors = ["Evan Curtin"]

[tool.poetry.dependencies]
python = "^3.10"
cattrs = "^22.2.0"
polars = "^0.16.8"
pyarrow = "^11.0.0"
scikit-learn = "^1.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.252"
black = "^23.1.0"
pytest = "^7.2.1"
mypy = "^1.0.1"
mkdocs = "^1.4.2"
mkdocs-material = ">=8.0.0,<9.0.0"
mkdocs-jupyter = "^0.22.0"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
